@@ -1,0 +1,1 @@
+debian/man/gmt-config.1
