@@ -16,6 +16,9 @@ ifneq (,$(findstring verbose,$(DEB_BUILD_OPTIONS)))
 endif
 
 UPSTREAM_VERSION=$(shell dpkg-parsechangelog | sed -ne 's/^Version: \(.*\)-.*/\1/p' | sed -e 's/~.*//; s/^[0-9]://')
+BUILD_DATE=$(shell dpkg-parsechangelog | sed -ne 's/^Date: //p' | LC_ALL=C date -u "+%d %B %Y" -f -)
+
+MANPAGES:=$(wildcard debian/man/*.*.xml)
 
 BUILDDIR = $(CURDIR)/debian/build
 DESTDIR	= $(CURDIR)/debian/tmp
@@ -39,6 +42,9 @@ CMAKE_OPTS = -DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		--sourcedirectory=$(CURDIR) --builddirectory=$(BUILDDIR) \
 		--parallel
 
+override_dh_clean:
+	dh_clean debian/man/*.1
+
 override_dh_auto_clean:
 	rm -rf $(BUILDDIR) $(DESTDIR)
 	dh_auto_clean
@@ -52,6 +58,12 @@ override_dh_auto_build-indep:
 	$(MAKE) -C $(BUILDDIR) docs_man docs_html docs_pdf
 
 override_dh_auto_install:
+	# Create man pages from DocBook XML
+	for x in $(MANPAGES) ; do \
+	  docbook2x-man --string-param header-3="$(BUILD_DATE)" $$x ; \
+	  mv `basename $$x | sed 's/.xml$$//'` `dirname $$x` ; \
+	done
+
 	DESTDIR=$(DESTDIR) $(MAKE) -C $(BUILDDIR) install
 	# remove duplicated stuff
 #	rm -rf debian/tmp/usr/share/conf \
