@@ -44,6 +44,7 @@ gmt (5.1.2+dfsg1-1) UNRELEASED; urgency=medium
   * Add symbols file for libgmt5.
   * Add debug package.
   * Use Breaks/Replaces instead of versioned Conflicts.
+  * Add manpage for gmt-config.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sun, 07 Jun 2015 12:06:29 +0200
 
